Fixed text spacing

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -108,11 +108,11 @@ body {
 }
 
 .text {
-  font-size: .85em;
+  font-size: 1em;
   font-weight: 700;
   text-transform: uppercase;
   line-height: 1.6;
-  letter-spacing: 5px;
+
 }
 
 p {
